--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
+#Health Index
+health_check:
+   path: /
+   methods: [GET]
+   defaults: { _controller: 'App\Controller\HealthCheckController::health' }
 #Users Routes
 index:
    path: /users
